--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 
 <p>The results show that <i>Lethal Company</i> is far more popular than <i>Call of Duty</i> in English speaking countries. This demonstrates just how much the game’s sales have been fueled by online content, as internet users outside of english-speaking circles do not seem to have caught on to the game as much. China, with its separate internet ecosystem, had a statistically insignificant amount of <i>Lethal Company</i> sales despite their large gaming market. </p>
 
-<p> Award-winning game designer Nicholas Fortugno says <i>Lethal Company’s</i> intelligent game design creates incentives to work as a team, but also to betray each other. This makes for interesting and entertaining moments which people like to share online, fueling the game’s popularity.</p>
+<p> Award-winning game designer Nicholas Fortugno says <i>Lethal Company’s</i> intelligent game design creates incentives to work as a team, but also to betray each other. This makes for interesting and entertaining moments which people like to share online, and viral clips of the game have fueled its popularity.</p>
 
 <p>“Players are constantly pressed to make choices to work together or abandon each other, and the risk/reward balance of that is great,” Fortugno said. “When players tell stories about the game, that's what they talk about.” </p>
 
-<p> <i>Lethal Company’s</i> unassuming graphics and low budget would cause it to fly under most people’s radar if it didn’t have a viral craze associated with it. In the places where the game hasn’t been bought much, chances are most people simply don’t know about it yet.  </p>
+<p> <i>Lethal Company’s</i> unassuming graphics and low budget would cause it to fly under most people’s radar if it didn’t have a viral craze associated with it. In places where the it hasn’t been bought much, it is likely that the game hasn't been trending on social media.  </p>
 
 
 </div>
